--- a/static/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/38.md
+++ b/static/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/38.md
@@ -2,4 +2,4 @@
 title = "38"
 
 +++
-सेव्यमानाविति॥ पुनः कथंभूतौ? सुखः शीतलत्वात्प्रियः स्पर्शो येषां तैः। शालनिर्यासगन्धिभिः सर्जतरुनिस्यन्दगन्धवद्भिः। 'शालः सर्जतरुः स्मृतः' इति शाश्वतः। उत्किरन्ति विक्षिपन्तीत्युत्किराः। 'इगुपध-' (पा.3।1।135) इत्यादिना किरतेः कप्रत्ययः। पुष्परेणूनामुत्किरास्तैराधूता मान्द्यादीषत्कम्पिता वनराजयो यैस्तैर्वातैः सेव्यमानौ ॥ 38 ॥
+सेव्यमानाविति॥ पुनः कथंभूतौ? **सुखः** शीतलत्वात् प्रियः **स्पर्शो** येषां तैः। **शाल-निर्यास-गन्धिभिः** सर्ज-तरु-निस्यन्द-गन्धवद्भिः। 'शालः सर्जतरुः स्मृतः' इति शाश्वतः। उत्किरन्ति विक्षिपन्तीत्य् उत्किराः। 'इगुपध-' (पा.3।1।135) इत्यादिना किरतेः कप्रत्ययः। **पुष्प-रेणूनाम् उत्किरास्** तैर् आधूता मान्द्याद् ईषत्-कम्पिता **वन-राजयो** यैस् तैर् **वातैः** सेव्यमानौ ॥ 38 ॥
